FIx whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -763,9 +763,7 @@ footer ol, footer ol > *,
 footer ul, footer ul > *
   { background: inherit }
 dl {}
-ul {
-  list-style: inherit;
-}
+ul { list-style: inherit }
 ol {
   list-style: ordered;
   counter-reset: ordered 0;
